--- a/aamoro35HW1.ipynb
+++ b/aamoro35HW1.ipynb
@@ -92,9 +92,9 @@
     "collapsed": true
    },
    "source": [
-    "1. поиск файлов, содержащих дату в имени файла, по маске, с последующей фильтрацией по времени от текущей даты.\n",
-    "2. конкатенация файлов олологов по PID/UID/datetime, выбор строк по маске и создание форматированного вывода.\n",
-    "3. и тд и тп"
+    "* поиск файлов, содержащих дату в имени файла, по маске, с последующей фильтрацией по времени от текущей даты.\n",
+    "* конкатенация файлов олологов по PID/UID/datetime, выбор строк по маске и создание форматированного вывода.\n",
+    "* и тд и тп"
    ]
   },
   {
